--- a/src/SelectedWhitespace.csproj
+++ b/src/SelectedWhitespace.csproj
@@ -45,6 +45,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AdornmentLayers.cs" />
+    <Compile Include="Constants.cs" />
+    <Compile Include="LineEndingWhitespaceAdornment.cs" />
+    <Compile Include="LineEndingWhitespaceAdornmentTextViewCreationListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Commands\MyCommand.cs" />
     <Compile Include="SelectedWhitespacePackage.cs" />
