Refactor whitespace glyph creation into factory class
---
- 🎨 Centralize glyph creation in new WhitespaceGlyphFactory
- 🧹 Remove duplicate glyph styling logic from adornment classes
- 🏷️ Move color/opacity constants to main Constants namespace; add LineEndingLeftMargin
- 🪄 Use factory for consistent font, color, alignment, and margin
- 🗂️ Add WhitespaceGlyphFactory.cs to project file
- 🧑‍💻 Improve code reuse, maintainability, and visual consistency

--- a/src/SelectedWhitespace.csproj
+++ b/src/SelectedWhitespace.csproj
@@ -64,6 +64,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>VSCommandTable.vsct</DependentUpon>
     </Compile>
+    <Compile Include="WhitespaceGlyphFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\LICENSE.txt" />
