--- a/src/SelectedWhitespace.csproj
+++ b/src/SelectedWhitespace.csproj
@@ -50,7 +50,6 @@
     <Compile Include="LineEndingWhitespaceAdornment.cs" />
     <Compile Include="LineEndingWhitespaceAdornmentTextViewCreationListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Commands\MyCommand.cs" />
     <Compile Include="SelectedWhitespacePackage.cs" />
     <Compile Include="SelectionWhitespaceAdornment.cs" />
     <Compile Include="SelectionWhitespaceAdornmentTextViewCreationListener.cs" />
@@ -105,6 +104,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
