--- a/src/SelectedWhitespace.csproj
+++ b/src/SelectedWhitespace.csproj
@@ -16,7 +16,7 @@
     <RootNamespace>SelectedWhitespace</RootNamespace>
     <AssemblyName>SelectedWhitespace</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <GeneratePkgDefFile>true</GeneratePkgDefFile>
+    <GeneratePkgDefFile>false</GeneratePkgDefFile>
     <UseCodebase>true</UseCodebase>
     <IncludeAssemblyInVSIXContainer>true</IncludeAssemblyInVSIXContainer>
     <IncludeDebugSymbolsInVSIXContainer>true</IncludeDebugSymbolsInVSIXContainer>
